--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,30 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+
+ @media screen and (max-width: 768px) {
+
+    .container{
+        width: 100vw;
+    }
+    
+ }
+
+ @media screen and (max-width:480px) {
+
+    .container{
+        flex-direction: column;
+        flex-wrap: nowrap;
+    }
+    
+    .row{
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .steps .col, .lessons .col, .why-us .col{
+        width: 100%;
+        margin-top: 3rem;
+    }
+ }
