Add bonus request

--- a/css/style.css
+++ b/css/style.css
@@ -127,14 +127,31 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+@media screen and (min-width: 769px) and (max-width:1160px) {
+    body{
+        overflow-x: hidden;
+    }
 
+    .container{
+        width: 100vw;
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
 
+ 
  @media screen and (max-width: 768px) {
 
     .container{
         width: 100vw;
+        padding-left: 0;
+        padding-right: 0;
     }
-    
+
+    body{
+        overflow-x: hidden;
+    }
+
  }
 
  @media screen and (max-width:480px) {
@@ -176,4 +193,9 @@ img {
     .site-header, .lessons{
         background-color: #232946;
     }
+
+    body{
+        overflow-x: hidden;
+    }
  }
+ 
